--- a/notes.html
+++ b/notes.html
@@ -24,7 +24,7 @@
             <td align="center">1.6</td>
         </tr>
         <td align="center">America</td>
-        <td align="center">Vocington DC</td>
+        <td align="center">Washington,D.C.</td>
         <td align="center">Jo Biden</td>
         <td align="center">2.9</td>
         </tr>
